--- a/app/src/main/res/layout/activity_reset_pw.xml
+++ b/app/src/main/res/layout/activity_reset_pw.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,35 +7,39 @@
     android:background="@color/main_theme_subcyan"
     tools:context=".ui.login.ResetPwActivity">
 
+    <!-- 비밀번호 찾기 제목 텍스트 -->
     <TextView
         android:id="@+id/textview_pw_reset_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
+        android:includeFontPadding="false"
         android:text="@string/pw_reset_link"
         android:textColor="@color/general_theme_white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.1510" />
 
+    <!-- 이메일 텍스트 -->
     <TextView
         android:id="@+id/textview_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:fontFamily="@font/noto_sans_kr_bold"
+        android:includeFontPadding="false"
         android:text="@string/user_email"
         android:textColor="@color/general_theme_black"
-        android:textFontWeight="900"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/textview_pw_reset_link"
-        app:layout_constraintStart_toStartOf="@id/textview_pw_reset_link"
-        app:layout_constraintTop_toBottomOf="@id/textview_pw_reset_link" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_pw_reset_link"
+        app:layout_constraintVertical_bias="0.0515" />
 
+    <!-- 이메일 체크 내용 텍스트 -->
     <TextView
         android:id="@+id/textview_attachLink"
         android:layout_width="wrap_content"
@@ -44,40 +47,52 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:gravity="center"
+        android:includeFontPadding="false"
         android:text="@string/attach_link"
         android:textColor="@color/general_theme_white"
-        android:textFontWeight="400"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/textview_email"
-        app:layout_constraintStart_toStartOf="@id/textview_email"
-        app:layout_constraintTop_toBottomOf="@id/textview_email" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_email"
+        app:layout_constraintVertical_bias="0.0566" />
 
+    <!-- 이메일 전송 오류 설명 텍스트 -->
+    <!-- TODO: 텍스트 자체에 문제가 있는 것을 확인-->
     <TextView
         android:id="@+id/textview_additional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:gravity="center"
+        android:includeFontPadding="false"
         android:text="@string/additional_message"
         android:textColor="@color/general_theme_white"
-        android:textFontWeight="400"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@id/textview_attachLink"
-        app:layout_constraintStart_toStartOf="@id/textview_attachLink"
-        app:layout_constraintTop_toBottomOf="@id/textview_attachLink" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_attachLink"
+        app:layout_constraintVertical_bias="0.1304" />
 
+    <!-- 닫기 버튼 -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_close"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@drawable/bg_rectangle_round"
         android:backgroundTint="@color/general_theme_white"
+        android:fontFamily="@font/noto_sans_kr_bold"
+        android:includeFontPadding="false"
         android:text="@string/btn_close"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/textview_additional"
-        app:layout_constraintStart_toStartOf="@id/textview_additional"
-        app:layout_constraintTop_toBottomOf="@id/textview_additional" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_additional"
+        app:layout_constraintWidth_percent="0.8833"
+        app:layout_constraintVertical_bias="0.3946"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
