--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -1,107 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.join.JoinPart1Activity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <View
-        android:layout_width="120dp"
-        android:layout_height="5dp"
-        android:background="@color/main_theme_blue"
-        app:layout_constraintBottom_toTopOf="@id/textview_join_membership"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.gachon.ttuckttak.ui.join.JoinPart1Viewmodel" />
+    </data>
 
-    <TextView
-        android:id="@+id/textview_join_membership"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_kr_bold"
-        android:text="@string/join_membership"
-        android:textColor="@color/general_theme_black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.084" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.join.JoinPart1Activity">
 
-    <ImageButton
-        android:id="@+id/imagebutton_back"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:backgroundTint="@android:color/transparent"
-        android:contentDescription="@string/blank_text"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_arrow_left"
-        app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
-        app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textview_join_membership" />
+        <View
+            android:layout_width="120dp"
+            android:layout_height="5dp"
+            android:background="@color/main_theme_blue"
+            app:layout_constraintBottom_toTopOf="@id/textview_join_membership"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textview_join_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="289dp"
-        android:fontFamily="@font/noto_sans_kr_bold"
-        android:text="@string/join_email"
-        android:textColor="@color/general_theme_black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/textview_join_membership"
-        app:layout_constraintStart_toStartOf="@id/imagebutton_back"
-        app:layout_constraintTop_toBottomOf="@id/textview_join_membership" />
+        <TextView
+            android:id="@+id/textview_join_membership"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:text="@string/join_membership"
+            android:textColor="@color/general_theme_black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.084" />
 
-    <EditText
-        android:id="@+id/edittext_email"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/textbox"
-        android:hint="@string/user_email"
-        android:inputType="textEmailAddress"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="10dp"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_join_email"
-        app:layout_constraintWidth_percent="0.91" />
+        <ImageButton
+            android:id="@+id/imagebutton_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:backgroundTint="@android:color/transparent"
+            android:contentDescription="@string/blank_text"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_arrow_left"
+            android:onClick="@{() -> viewmodel.goBack()}"
+            app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
+            app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textview_join_membership" />
 
-    <TextView
-        android:id="@+id/textview_error_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_kr_bold"
-        android:textColor="@color/general_theme_red"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/edittext_email"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_email"
-        tools:text="@string/overlap_email" />
+        <TextView
+            android:id="@+id/textview_join_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="289dp"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:text="@string/join_email"
+            android:textColor="@color/general_theme_black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@id/textview_join_membership"
+            app:layout_constraintStart_toStartOf="@id/imagebutton_back"
+            app:layout_constraintTop_toBottomOf="@id/textview_join_membership" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_send"
-        style="@style/DefaultButton"
-        android:layout_width="318dp"
-        android:layout_height="wrap_content"
-        android:enabled="false"
-        android:text="@string/certification_code"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/edittext_email"
-        app:layout_constraintStart_toStartOf="@+id/edittext_email"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
+        <EditText
+            android:id="@+id/edittext_email"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/textbox"
+            android:hint="@string/user_email"
+            android:inputType="textEmailAddress"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.06"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textview_join_email"
+            app:layout_constraintWidth_percent="0.91" />
 
-    <ProgressBar
-        android:id="@+id/progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textview_error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:textColor="@color/general_theme_red"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/edittext_email"
+            app:layout_constraintTop_toBottomOf="@+id/edittext_email"
+            tools:text="@string/overlap_email" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_send"
+            style="@style/DefaultButton"
+            android:layout_width="318dp"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:text="@string/certification_code"
+            android:onClick="@{() ->viewmodel.sendEmailConfirmation(edittextEmail.getText().toString())}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/edittext_email"
+            app:layout_constraintStart_toStartOf="@+id/edittext_email"
+            app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
